derive Element from QObject; add Q_OBJECT into every Element class
Former-commit-id: 5182c9e08532c5a8c5233fb17898b5bcde3540ae

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ set(QT_USE_QTSCRIPT   TRUE)
 set(QT_USE_QTSCRIPTTOOLS   TRUE)
 set(QT_USE_QTWEBKIT   TRUE)
 set(QT_USE_QTXMLPATTERNS TRUE)
+set(QT_USE_QTDECLARATIVE TRUE)
 
 find_package(Qt4 "4.7")
 
