--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -82,7 +82,7 @@ QT4_WRAP_CPP (mocs
       drumtools.h texteditor.h texttools.h edittools.h pianotools.h editpitch.h
       editstringdata.h editraster.h mediadialog.h chordeditor.h chordview.h album.h layer.h
       webpage.h inspector.h inspectorBase.h inspectorBeam.h masterpalette.h
-      inspectorGroupElement.h inspectorImage.h waveview.h
+      inspectorGroupElement.h inspectorImage.h waveview.h plugins.h
       ${OMR_MOCS}
       )
 
