--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -11,8 +11,75 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
+QT4_WRAP_CPP (mocs
+      accidental.h
+      arpeggio.h
+      articulation.h
+      barline.h
+      beam.h
+      bend.h
+      box.h
+      bracket.h
+      breath.h
+      bsymbol.h
+      chord.h
+      chordline.h
+      chordrest.h
+      clef.h
+      duration.h
+      dynamic.h
+      element.h
+      figuredbass.h
+      fingering.h
+      fret.h
+      glissando.h
+      hairpin.h
+      harmony.h
+      hook.h
+      icon.h
+      image.h
+      instrchange.h
+      keysig.h
+      lasso.h
+      layoutbreak.h
+      line.h
+      lyrics.h
+      measurebase.h
+      measure.h
+      notedot.h
+      note.h
+      ossia.h
+      ottava.h
+      page.h
+      pedal.h
+      rehearsalmark.h
+      repeat.h
+      rest.h
+      segment.h
+      shadownote.h
+      simpletext.h
+      slur.h
+      spacer.h
+      spanner.h
+      stafftext.h
+      stem.h
+      symbol.h
+      system.h
+      tempotext.h
+      textframe.h
+      text.h
+      textline.h
+      timesig.h
+      tremolobar.h
+      tremolo.h
+      trill.h
+      tuplet.h
+      volta.h
+      )
+
 add_library (
       libmscore STATIC
+      ${mocs}
       segmentlist.cpp fingering.cpp accidental.cpp arpeggio.cpp
       articulation.cpp barline.cpp beam.cpp bend.cpp box.cpp
       bracket.cpp breath.cpp bsp.cpp chord.cpp chordline.cpp
