new beam code, fixes a cross beam problem
Former-commit-id: 47dfd3fded834ddf6b8e3f99723d9fac535db945

--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -44,6 +44,6 @@ add_library (
 set_target_properties (
       libmscore
       PROPERTIES
-         COMPILE_FLAGS "-include ${PROJECT_BINARY_DIR}/all.h -Wall -Wextra -Winvalid-pch"
+         COMPILE_FLAGS "-g -include ${PROJECT_BINARY_DIR}/all.h -Wall -Wextra -Winvalid-pch"
       )
 
