new testscript: scorelist.qml
Former-commit-id: 11504144575a7d44181adbb8cb775ff6747a8e65

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -71,7 +71,7 @@ QT4_WRAP_CPP (mocs
       jumpproperties.h markerproperties.h boxproperties.h newwizard.h
       transposedialog.h chordedit.h tempoproperties.h lineproperties.h
       excerptsdialog.h stafftextproperties.h glissandoproperties.h
-      script.h articulationprop.h metaedit.h magbox.h voiceselector.h
+      articulationprop.h metaedit.h magbox.h voiceselector.h
       textprop.h dynamicprop.h textproperties.h tupletdialog.h tupletproperties.h
       slurproperties.h selectdialog.h synthcontrol.h drumroll.h pianoroll.h
       piano.h ruler.h file.h
