Fix make version
Former-commit-id: 5b49b8186f301df17b2f071cbb207dec72dc81df

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -19,8 +19,8 @@
 #=============================================================================
 
 
-REVISION  = $(shell type mscore\mscore\revision.h)
-VERSION   = 2.0r${REVISION}
+REVISION  = $(shell type mscore\revision.h)
+VERSION   = 2.0b-${REVISION}
 MINGW_DIR = C:\QtSDK\mingw
 CPUS = 2
 
