--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -39,7 +39,7 @@ add_library (
       dsp.cpp tempo.cpp sig.cpp pos.cpp fraction.cpp duration.cpp
       figuredbass.cpp simpletext.cpp rehearsalmark.cpp transpose.cpp
       property.cpp range.cpp elementmap.cpp notedot.cpp imageStore.cpp
-      qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp
+      qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp midifile.cpp exportmidi.cpp
       )
 set_target_properties (
       libmscore
