replace mtest by ./mtest for travis ci...
Former-commit-id: 2b1abfc728c94f45cd75111570a93c9e6dcd1a28

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - "sudo make install"
   - "cd build.release/mtest"
 script:
-  - "make && xvfb-run mtest"
+  - "make && xvfb-run ./mtest"
 notifications:
   recipients:
     - build@musescore.org
