use make debug instead of make release for travis CI
Former-commit-id: 9a7b43db45d916047de5db387c6a6a550dc99ef4

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - "sudo apt-get install -y libasound2-dev portaudio19-dev libsndfile1-dev zlib1g-dev libfreetype6-dev libfontconfig-dev"
   - "sudo apt-get install -y lame libmp3lame-dev"
 before_script: 
-  - "make"
+  - "make debug"
   - "sudo make install"
   - "cd build.release/mtest"
 script:
