make debug for Travis CI
Former-commit-id: 921da9c80047f022a6b134e1958e6a17f95864ad

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
   - "sudo apt-get install -y lame libmp3lame-dev"
 before_script: 
   - "make debug"
-  - "sudo make install"
-  - "cd build.release/mtest"
+  - "sudo make installdebug"
+  - "cd build.debug/mtest"
 script:
   - "make && xvfb-run ./mtest"
 notifications:
