fix for 'insert timesig' with regression test
Former-commit-id: ed875e56cc11547c323971bbd89e5dff434ad334

--- a/mtest/libmscore/timesig/CMakeLists.txt
+++ b/mtest/libmscore/timesig/CMakeLists.txt
@@ -11,8 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-subdirs(
-      hairpin note midi compat link measure beam split join
-      timesig
-      )
+set(TARGET tst_beam)
+
+include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
