add installdebug target in Makefile.osx
Former-commit-id: 1765a8725691ac126068949abf315c68132bcfd4

--- a/Makefile.osx
+++ b/Makefile.osx
@@ -74,5 +74,8 @@ version: revision
 install:
 	cd build.release;xcodebuild -project mscore.xcodeproj -configuration Release -target install;
 
+installdebug:
+	cd build.debug;xcodebuild -project mscore.xcodeproj -configuration Debug -target install;
+
 package:
 	build/package_mac;
