fix #16173: Changing and introducing time signatrues after Inser One Measure causes corruption
Former-commit-id: 9767fb29dff87a07d9d53068c2a500580f66e01c

--- a/mtest/libmscore/timesig/CMakeLists.txt
+++ b/mtest/libmscore/timesig/CMakeLists.txt
@@ -11,7 +11,7 @@
 #  the file LICENSE.GPL
 #=============================================================================
 
-set(TARGET tst_beam)
+set(TARGET tst_timesig)
 
 include(${PROJECT_SOURCE_DIR}/mtest/cmake.inc)
 
