- create Cursor from Score - return Note from Cursor->addNote()
Former-commit-id: 9d7e56f320d56568b858665e0045728dce3c897c

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -83,7 +83,6 @@ QT4_WRAP_CPP (mocs
       editstringdata.h editraster.h mediadialog.h chordeditor.h chordview.h album.h layer.h
       webpage.h inspector.h inspectorBase.h inspectorBeam.h masterpalette.h
       inspectorGroupElement.h inspectorImage.h waveview.h plugins.h
-      cursor.h
       ${OMR_MOCS}
       )
 
@@ -157,7 +156,7 @@ add_executable ( ${ExecutableName}
       timesigproperties.cpp newwizard.cpp transposedialog.cpp
       chordedit.cpp plugins.cpp excerptsdialog.cpp
       metaedit.cpp magbox.cpp voiceselector.cpp capella.cpp
-      exportaudio.cpp exportmidi.cpp
+      exportaudio.cpp
       textproperties.cpp slurproperties.cpp
       synthcontrol.cpp drumroll.cpp pianoroll.cpp piano.cpp
       pianoview.cpp drumview.cpp scoretab.cpp keyedit.cpp harmonyedit.cpp
@@ -177,7 +176,7 @@ add_executable ( ${ExecutableName}
       inspector.cpp dragelement.cpp svggenerator.cpp
       inspectorBase.cpp inspectorBeam.cpp masterpalette.cpp
       inspectorGroupElement.cpp dragdrop.cpp inspectorImage.cpp
-      waveview.cpp musicxmlsupport.cpp cursor.cpp
+      waveview.cpp musicxmlsupport.cpp
       ${OMR_FILES}
       ${AUDIO}
       )
