--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -77,6 +77,7 @@ QT4_WRAP_CPP (mocs
       volta.h
       score.h
       mscore1.h
+      cursor.h
       )
 
 add_library (
@@ -108,7 +109,8 @@ add_library (
       dsp.cpp tempo.cpp sig.cpp pos.cpp fraction.cpp duration.cpp
       figuredbass.cpp simpletext.cpp rehearsalmark.cpp transpose.cpp
       property.cpp range.cpp elementmap.cpp notedot.cpp imageStore.cpp
-      qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp midifile.cpp exportmidi.cpp
+      qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp midifile.cpp
+      exportmidi.cpp cursor.cpp
       )
 set_target_properties (
       libmscore
