add plugin editor
Former-commit-id: 870beae8de1eb57a183969291aad81099f183f86

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -54,7 +54,7 @@ QT4_WRAP_UI (ui_headers
       inspector_articulation.ui inspector_spacer.ui inspector_hbox.ui keysig.ui
       inspector_segment.ui inspector_beam.ui inspector_note.ui
       rest.ui inspector_chord.ui omrpanel.ui startdialog.ui masterpalette.ui
-      inspector_group_element.ui inspector_image.ui stem.ui
+      inspector_group_element.ui inspector_image.ui stem.ui pluginCreator.ui
       )
 
 if (OMR)
@@ -82,7 +82,7 @@ QT4_WRAP_CPP (mocs
       drumtools.h texteditor.h texttools.h edittools.h pianotools.h editpitch.h
       editstringdata.h editraster.h mediadialog.h chordeditor.h chordview.h album.h layer.h
       webpage.h inspector.h inspectorBase.h inspectorBeam.h masterpalette.h
-      inspectorGroupElement.h inspectorImage.h waveview.h plugins.h
+      inspectorGroupElement.h inspectorImage.h waveview.h plugins.h pluginCreator.h
       ${OMR_MOCS}
       )
 
@@ -176,7 +176,7 @@ add_executable ( ${ExecutableName}
       inspector.cpp dragelement.cpp svggenerator.cpp
       inspectorBase.cpp inspectorBeam.cpp masterpalette.cpp
       inspectorGroupElement.cpp dragdrop.cpp inspectorImage.cpp
-      waveview.cpp musicxmlsupport.cpp
+      waveview.cpp musicxmlsupport.cpp pluginCreator.cpp
       ${OMR_FILES}
       ${AUDIO}
       )
