--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -83,6 +83,7 @@ QT4_WRAP_CPP (mocs
       editstringdata.h editraster.h mediadialog.h chordeditor.h chordview.h album.h layer.h
       webpage.h inspector.h inspectorBase.h inspectorBeam.h masterpalette.h
       inspectorGroupElement.h inspectorImage.h waveview.h plugins.h pluginCreator.h
+      qmledit.h
       ${OMR_MOCS}
       )
 
@@ -176,7 +177,7 @@ add_executable ( ${ExecutableName}
       inspector.cpp dragelement.cpp svggenerator.cpp
       inspectorBase.cpp inspectorBeam.cpp masterpalette.cpp
       inspectorGroupElement.cpp dragdrop.cpp inspectorImage.cpp
-      waveview.cpp musicxmlsupport.cpp pluginCreator.cpp
+      waveview.cpp musicxmlsupport.cpp pluginCreator.cpp qmledit.cpp
       ${OMR_FILES}
       ${AUDIO}
       )
