mv sparm to libmscore
Former-commit-id: 7901b286da3d688df281556172a8d62a8caa0fdf

--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -40,7 +40,7 @@ add_library (
       figuredbass.cpp simpletext.cpp rehearsalmark.cpp transpose.cpp
       property.cpp range.cpp elementmap.cpp notedot.cpp imageStore.cpp
       qzip.cpp audio.cpp splitMeasure.cpp joinMeasure.cpp midifile.cpp
-      exportmidi.cpp read114.cpp
+      exportmidi.cpp read114.cpp sparm.cpp
       )
 set_target_properties (
       libmscore
