--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,8 +300,8 @@ add_custom_command(
    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
    )
 
-set(CMAKE_CXX_FLAGS_DEBUG   "-fPIC -g")
-set(CMAKE_CXX_FLAGS_RELEASE "-fPIC -O2 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG   "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
 
 if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
       if (MINGW)
