remove -fPIC from linux debug build
Former-commit-id: 9d5877885d3e76ec8face41f9d7cc92ca69a2354

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -310,7 +310,7 @@ if (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
       	if(APPLE)
             	set (FLAGS -O0 -DQT_DEBUG)
             else (APPLE)
-            	set (FLAGS -DQT_DEBUG -fPIC)
+            	set (FLAGS -DQT_DEBUG)
             endif(APPLE)
       endif (MINGW)
 else (CMAKE_BUILD_TYPE STREQUAL "DEBUG")
