more script bindings; add pluginCreator help browser
Former-commit-id: 52744d6de9a6c0a5087397fce67dc23bf20ae252

--- a/share/manual/CMakeLists.txt
+++ b/share/manual/CMakeLists.txt
@@ -1,9 +1,9 @@
 #=============================================================================
-#  Mscore
-#  Linux Music Score Editor
+#  MusE
+#  Linux Music Editor
 #  $Id:$
 #
-#  Copyright (C) 2002-2006 by Werner Schweer and others
+#  Copyright (C) 2002-2008 by Werner Schweer and others
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License version 2.
@@ -18,5 +18,7 @@
 #  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #=============================================================================
 
-subdirs( templates wallpaper locale plugins styles sound manual)
-
+install(FILES
+      plugins.html
+      DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
+      )
