add manual generator for plugins
Former-commit-id: 8e11e03a532adcd39b8f8f1865ae609a2f8e3df3

--- a/share/manual/CMakeLists.txt
+++ b/share/manual/CMakeLists.txt
@@ -3,7 +3,7 @@
 #  Linux Music Editor
 #  $Id:$
 #
-#  Copyright (C) 2002-2008 by Werner Schweer and others
+#  Copyright (C) 2002-2012 by Werner Schweer and others
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License version 2.
@@ -19,6 +19,29 @@
 #=============================================================================
 
 install(FILES
+      chord.html
+      chordrest.html
+      cursor.html
+      data.html
+      element.html
+      harmony.html
+      measurebase.html
+      measure.html
+      musescore.html
+      note.html
+      pageformat.html
+      page.html
+      part.html
       plugins.html
+      qfile.html
+      qprocess.html
+      rest.html
+      score.html
+      scoreview.html
+      segment.html
+      staff.html
+      text.html
+      timesig.html
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
       )
+
