fix Windows build, include QtSql and QtScript dlls since QtDeclarative depends on them by default. see #17292
Former-commit-id: acdb08f2e6b55b77c2b1e7dd71783569a58003d9

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -286,6 +286,8 @@ if (MINGW)
       ${CROSSQT}/bin/phonon4.dll
       ${CROSSQT}/bin/QtXmlPatterns4.dll
       ${CROSSQT}/bin/QtDeclarative4.dll
+      ${CROSSQT}/bin/QtScript4.dll
+      ${CROSSQT}/bin/QtSql4.dll
       )
    install_files ( /bin/iconengines .dll
       ${CROSSQT}/plugins/iconengines/qsvgicon4.dll
