disable handbook install on windows and mac until we sort out how to download it
Former-commit-id: a3d5580597cffffa052844472735d3350ff8bbf6

--- a/share/manual/CMakeLists.txt
+++ b/share/manual/CMakeLists.txt
@@ -45,8 +45,11 @@ install(FILES
       plugins/timesig.html
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
       )
+
+if (NOT MINGW AND NOT APPLE)
 install (DIRECTORY
       en de
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
       )
+endif (NOT MINGW AND NOT APPLE)
 
