fix CI compilation
Former-commit-id: 4540f3c3588a049dcae93865c0611f50026ae4a3

--- a/share/manual/CMakeLists.txt
+++ b/share/manual/CMakeLists.txt
@@ -46,10 +46,10 @@ install(FILES
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
       )
 
-if (NOT MINGW AND NOT APPLE)
+if (IS_DIRECTORY en)
 install (DIRECTORY
       en de
       DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
       )
-endif (NOT MINGW AND NOT APPLE)
+endif (IS_DIRECTORY en)
 
