fix plugin manual deployment
Former-commit-id: 1a1d8769512946de4b22aae4672aad66b06dfebe

--- a/share/manual/CMakeLists.txt
+++ b/share/manual/CMakeLists.txt
@@ -43,7 +43,7 @@ install(FILES
       plugins/staff.html
       plugins/text.html
       plugins/timesig.html
-      DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual
+      DESTINATION ${Mscore_SHARE_NAME}${Mscore_INSTALL_NAME}manual/plugins
       )
 
 if (IS_DIRECTORY en)
