fix doxygen build; add doxygen configuration for library only
Former-commit-id: a73ccc3f8e25db7125005f7a7cabd73c672e81e4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,6 +269,10 @@ configure_file (
       ${PROJECT_SOURCE_DIR}/build/Doxyfile.in
       ${PROJECT_BINARY_DIR}/Doxyfile
       )
+configure_file (
+      ${PROJECT_SOURCE_DIR}/build/Doxyfile-LibMscore.in
+      ${PROJECT_BINARY_DIR}/Doxyfile-LibMscore
+      )
 if (NOT MINGW AND NOT APPLE)
       install( FILES build/mscore.desktop DESTINATION share/applications)
 endif (NOT MINGW AND NOT APPLE)
