remove fration.h from moc processing
Former-commit-id: 271c363f698acd28de572347ee2c13488e9d9c86

--- a/libmscore/CMakeLists.txt
+++ b/libmscore/CMakeLists.txt
@@ -22,7 +22,7 @@ if (SCRIPT_INTERFACE)
       rest.h segment.h shadownote.h simpletext.h slur.h spacer.h spanner.h
       stafftext.h stem.h symbol.h system.h tempotext.h textframe.h text.h
       textline.h timesig.h tremolobar.h tremolo.h trill.h tuplet.h volta.h
-      score.h cursor.h page.h part.h staff.h mscore.h fraction.h
+      score.h cursor.h page.h part.h staff.h mscore.h
       )
 endif (SCRIPT_INTERFACE)
 
