disable dSym generation
Former-commit-id: 1c9447d7fe3dcc99b740f3c2ab099a2ffc0e54c1

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -194,9 +194,10 @@ if (APPLE)
       set_target_properties (mscore
          PROPERTIES
             MACOSX_BUNDLE_INFO_PLIST ${PROJECT_SOURCE_DIR}/build/MacOSXBundleInfo.plist.in)
-      set_target_properties (mscore
-         PROPERTIES
-            XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT "dwarf-with-dsym")
+      #enable dSym generation
+      #set_target_properties (mscore
+      #   PROPERTIES
+      #      XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT "dwarf-with-dsym")
 endif(APPLE)
 
 if (OSC)
