fix Xcode project generation
Former-commit-id: be8ea0ea81873e05fe50e23cdef91519aa41801f

--- a/manual/CMakeLists.txt
+++ b/manual/CMakeLists.txt
@@ -23,8 +23,17 @@ target_link_libraries(
       genManual
       ${QT_LIBRARIES}
       )
+
+if(APPLE)
+set_target_properties (
+      genManual
+      PROPERTIES
+      COMPILE_FLAGS "-include all.h -I${QT_HEADERS_DIR} -D TESTROOT=\\\\\"${PROJECT_SOURCE_DIR}\\\\\" -g -Wall -Wextra"
+      )
+else(APPLE)
 set_target_properties (
       genManual
       PROPERTIES
       COMPILE_FLAGS "-include all.h -I${QT_HEADERS_DIR} -D TESTROOT=\\\"${PROJECT_SOURCE_DIR}\\\" -g -Wall -Wextra"
       )
+endif(APPLE)
